SubBt/force-app/main/default/objects/Users_Contacts__c/Users_Contacts__c.object-meta.xml
<CustomObject>
    <label>Users/Contacts</label>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>Users/Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users/Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>