SubBt/force-app/main/default/objects/Users_Contacts__c/fields/RFI__c.field-meta.xml
<CustomField>
    <fullName>RFI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI</label>
    <referenceTo>RFI__c</referenceTo>
    <relationshipLabel>Users/Contacts</relationshipLabel>
    <relationshipName>Users_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>